# rust_automaton

./: Cargo.toml  README.md
src/: grid.rs  grid_display.rs  lib.rs  main.rs  state.rs
src/automatons/: bb.rs  gol.rs  mod.rs  seeds.rs
